# justadrop.xyz

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  LICENSE  Makefile  README.md  bun.lockb  bunfig.toml  deploy.sh  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  setup-local.sh  tailwind.config.ts
apps/api/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  alembic.ini  main.py  package.json  pyproject.toml  seed_db.py  tsconfig.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5247166cf38b_enhance_models_for_full_platform.py  52e8db08a552_fix_ambiguous_foreign_key_relationships.py
apps/api/prisma/: schema.prisma
apps/api/src/: __init__.py  app.ts  index.ts  server.ts
apps/api/src/api/: __init__.py  routes.py
apps/api/src/controllers/: auth.controller.ts  index.ts  opportunity.controller.ts
apps/api/src/core/: __init__.py  config.py  database.py  migrations.py  notifications.py  security.py  seed.py
apps/api/src/middleware/: auth.middleware.ts  auth.ts  error-handler.ts  index.ts
apps/api/src/models/: __init__.py  models.py
apps/api/src/routes/: applications.ts  auth.ts  index.ts  opportunities.ts  organizations.ts  volunteers.ts
apps/api/src/schemas/: __init__.py  application.py  bookmark.py  opportunity.py  organization.py  user.py  volunteer_history.py
apps/api/src/services/: auth.service.ts  index.ts  opportunity.service.ts  otp.service.ts  session.service.ts
apps/api/src/templates/: base.html  dashboard_admin.html  dashboard_organization.html  (+5 more)
(+242 files in other folders)
